Opened 11 years ago

Closed 11 years ago

#10716 closed bug (fixed)

Preferences/Time crash with empty selection

Reported by: dknoto Owned by: axeld
Priority: normal Milestone: R1
Component: Preferences/Time & Date Version: R1/Development
Keywords: Network Time Cc:
Blocked By: Blocking:
Platform: All

Description

Application "Time" crashes when you push "Remove" button without any selection on list of network time servers.

Attachments (2)

NetworkTimeView.patch (831 bytes ) - added by dknoto 11 years ago.
Time-349-debug-26-03-2014-18-24-13.report (7.8 KB ) - added by jscipione 11 years ago.
Crash report

Download all attachments as: .zip

Change History (4)

by dknoto, 11 years ago

Attachment: NetworkTimeView.patch added

comment:1 by dknoto, 11 years ago

patch: 01

by jscipione, 11 years ago

Crash report

comment:2 by jscipione, 11 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev47057

Note: See TracTickets for help on using tickets.