Time Preferences crashes with empty selection

Application "Time" crashes when you push "Remove" button without any
selection on list of network time servers.

Fixes #10716

Please use git format-patch to create your patches in the future so that
the author information is preserved.

Signed-off-by: John Scipione <jscipione@gmail.com>